@@ -4,6 +4,8 @@
 	  Timeout for host regression tests (fix bug #3209).
 	* src/SDCClospre.hpp:
 	  Avoid unecessary flush of cout.
+	* device/lib/tlcs90/crt0.s:
+	  Fix implicit initialization.
 
 2021-04-03 Philipp Klaus Krause <pkk AT spth.de>
 
